// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object Field Test: locationField 1`] = `
<View>
  <View>
    <Text />
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#86939e",
            "flexDirection": "row",
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={true}
          keyboardType="numeric"
          mapTo="objectKey.myVal"
          onChangeText={[Function]}
          rejectResponderTermination={true}
          schema={
            Object {
              "title": "objectKey.myVal",
              "type": "number",
            }
          }
          secureTextEntry={false}
          style={
            Object {
              "alignSelf": "center",
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "minHeight": 40,
            }
          }
          testID="RNE__Input__text-input"
          underlineColorAndroid="transparent"
        />
      </View>
    </View>
    <View />
  </View>
  <View>
    <Text />
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#86939e",
            "flexDirection": "row",
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={true}
          keyboardType="numeric"
          mapTo="objectKey.secondNum"
          onChangeText={[Function]}
          rejectResponderTermination={true}
          schema={
            Object {
              "title": "objectKey.secondNum",
              "type": "number",
            }
          }
          secureTextEntry={false}
          style={
            Object {
              "alignSelf": "center",
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "minHeight": 40,
            }
          }
          testID="RNE__Input__text-input"
          underlineColorAndroid="transparent"
        />
      </View>
    </View>
    <View />
  </View>
</View>
`;

exports[`Object Field Test: set to invalid 1`] = `
<View>
  <View>
    <Text />
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#86939e",
            "flexDirection": "row",
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={true}
          keyboardType="numeric"
          mapTo="objectKey.myVal"
          onChangeText={[Function]}
          rejectResponderTermination={true}
          schema={
            Object {
              "title": "objectKey.myVal",
              "type": "number",
            }
          }
          secureTextEntry={false}
          style={
            Object {
              "alignSelf": "center",
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "minHeight": 40,
            }
          }
          testID="RNE__Input__text-input"
          underlineColorAndroid="transparent"
          value={NaN}
        />
      </View>
    </View>
    <View />
  </View>
  <View>
    <Text />
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#86939e",
            "flexDirection": "row",
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={true}
          keyboardType="numeric"
          mapTo="objectKey.secondNum"
          onChangeText={[Function]}
          rejectResponderTermination={true}
          schema={
            Object {
              "title": "objectKey.secondNum",
              "type": "number",
            }
          }
          secureTextEntry={false}
          style={
            Object {
              "alignSelf": "center",
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "minHeight": 40,
            }
          }
          testID="RNE__Input__text-input"
          underlineColorAndroid="transparent"
        />
      </View>
    </View>
    <View />
  </View>
</View>
`;

exports[`Object Field Test: set to otherValidLocation 1`] = `
<View>
  <View>
    <Text />
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#86939e",
            "flexDirection": "row",
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={true}
          keyboardType="numeric"
          mapTo="objectKey.myVal"
          onChangeText={[Function]}
          rejectResponderTermination={true}
          schema={
            Object {
              "title": "objectKey.myVal",
              "type": "number",
            }
          }
          secureTextEntry={false}
          style={
            Object {
              "alignSelf": "center",
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "minHeight": 40,
            }
          }
          testID="RNE__Input__text-input"
          underlineColorAndroid="transparent"
          value={767}
        />
      </View>
    </View>
    <View />
  </View>
  <View>
    <Text />
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#86939e",
            "flexDirection": "row",
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={true}
          keyboardType="numeric"
          mapTo="objectKey.secondNum"
          onChangeText={[Function]}
          rejectResponderTermination={true}
          schema={
            Object {
              "title": "objectKey.secondNum",
              "type": "number",
            }
          }
          secureTextEntry={false}
          style={
            Object {
              "alignSelf": "center",
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "minHeight": 40,
            }
          }
          testID="RNE__Input__text-input"
          underlineColorAndroid="transparent"
        />
      </View>
    </View>
    <View />
  </View>
</View>
`;

exports[`Object Field Test: set to validLocation 1`] = `
<View>
  <View>
    <Text />
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#86939e",
            "flexDirection": "row",
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={true}
          keyboardType="numeric"
          mapTo="objectKey.myVal"
          onChangeText={[Function]}
          rejectResponderTermination={true}
          schema={
            Object {
              "title": "objectKey.myVal",
              "type": "number",
            }
          }
          secureTextEntry={false}
          style={
            Object {
              "alignSelf": "center",
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "minHeight": 40,
            }
          }
          testID="RNE__Input__text-input"
          underlineColorAndroid="transparent"
          value={41}
        />
      </View>
    </View>
    <View />
  </View>
  <View>
    <Text />
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#86939e",
            "flexDirection": "row",
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={true}
          keyboardType="numeric"
          mapTo="objectKey.secondNum"
          onChangeText={[Function]}
          rejectResponderTermination={true}
          schema={
            Object {
              "title": "objectKey.secondNum",
              "type": "number",
            }
          }
          secureTextEntry={false}
          style={
            Object {
              "alignSelf": "center",
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "minHeight": 40,
            }
          }
          testID="RNE__Input__text-input"
          underlineColorAndroid="transparent"
        />
      </View>
    </View>
    <View />
  </View>
</View>
`;
